refactoring : refactor injector class to be singlton and expose getInstance and getBeans | kernel added